# rconpp

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  rconpp.pc.in
.github/: dependabot.yml
.github/workflows/: CI.yml
cmake/: CPackSetup.cmake  PostInstall.cmake  Win32Toolchain.cmake
include/: rcon.h
include/rconpp/: client.h  export.h  rcon.h  server.h  utilities.h
src/: rcon.cpp
src/rconpp/: client.cpp  server.cpp  utilities.cpp
unittest/: test.cpp
